--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"fancybox": "^3.0.1",
 		"form-data": "^2.3.3",
-		"gsap": "^2.1.3",
+		"gsap": "^3.2.5",
 		"lazyload": "^1.8.4",
 		"lodash": "^4.17.11",
 		"moment": "^2.24.0",
@@ -48,6 +48,7 @@
 		"sass-loader": "^7.2.0",
 		"shaderfrog-runtime": "^0.2.0",
 		"swiper": "^4.5.0",
+		"three": "^0.114.0",
 		"uglifyjs-webpack-plugin": "^2.2.0"
 	},
 	"devDependencies": {
