--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@emotion/core": "^10.0.28",
     "babel-plugin-component": "^1.1.1",
     "gatsby": "^2.19.45",
+    "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
