--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "gatsby": "^2.19.45",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-plugin-typography": "^2.4.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
+    "gsap": "^3.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
