--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "gatsby-plugin-typography": "^2.4.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
+    "git": "^0.1.5",
     "gsap": "^3.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "typography-theme-stern-grove": "^0.16.19",
+    "typography-theme-sutro": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
