--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
+    "three": "^0.115.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
