--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
+    "react-pose": "^4.0.10",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "three": "^0.115.0",
