--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
+    "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "three": "^0.115.0",
