--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-remark": "^2.7.1",
     "git": "^0.1.5",
     "gsap": "^3.2.6",
+    "lax.js": "^1.2.5",
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
@@ -35,11 +36,13 @@
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
+    "smooth-scrollbar": "^8.5.2",
     "three": "^0.115.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
-    "typography-theme-sutro": "^0.16.19"
+    "typography-theme-sutro": "^0.16.19",
+    "use-lax": "^3.2.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
