--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "smooth-scrollbar": "^8.5.2",
+    "swiper": "^5.3.7",
     "three": "^0.115.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
