--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@emotion/core": "^10.0.28",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "babel-plugin-component": "^1.1.1",
     "gatsby": "^2.19.45",
     "gatsby-plugin-emotion": "^4.2.1",
