--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@emotion/core": "^10.0.28",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "babel-plugin-component": "^1.1.1",
-    "gatsby": "^2.19.45",
+    "contentful": "^7.14.4",
+    "gatsby": "^2.23.11",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-transition-link": "^1.18.0",
@@ -29,17 +30,20 @@
     "git": "^0.1.5",
     "gsap": "^3.2.6",
     "lax.js": "^1.2.5",
+    "lerp": "^1.0.3",
+    "postprocessing": "^6.14.3",
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
     "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.2.12",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "smooth-scrollbar": "^8.5.2",
     "swiper": "^5.3.7",
-    "three": "^0.115.0",
+    "three": "0.111.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
