--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lax.js": "^1.2.5",
     "lerp": "^1.0.3",
     "postprocessing": "^6.14.3",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
@@ -42,6 +42,7 @@
     "react-typography": "^0.16.19",
     "sharp": "^0.25.2",
     "smooth-scrollbar": "^8.5.2",
+    "styled-components": "^5.1.1",
     "swiper": "^5.3.7",
     "three": "0.112.1",
     "typography": "^0.16.19",
