--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "use-lax": "^3.2.0"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^6.0.0",
     "prettier": "^1.19.1"
   },
   "repository": {
