--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EricKuang_Page",
+  "name": "erickuang_page",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -16,44 +16,47 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@react-three/fiber": "^7.0.1",
     "babel-plugin-component": "^1.1.1",
-    "contentful": "^7.14.4",
-    "gatsby": "^2.23.11",
-    "gatsby-plugin-emotion": "^4.2.1",
-    "gatsby-plugin-manifest": "^2.3.3",
+    "contentful": "^8.4.2",
+    "gatsby": "^3.7.2",
+    "gatsby-plugin-emotion": "^6.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-transition-link": "^1.18.0",
-    "gatsby-plugin-typography": "^2.4.1",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-remark": "^2.7.1",
-    "git": "^0.1.5",
+    "gatsby-plugin-typography": "^3.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-remark": "^4.4.1",
     "gsap": "^3.2.6",
-    "lax.js": "^1.2.5",
+    "lax.js": "^2.0.3",
     "lerp": "^1.0.3",
     "postprocessing": "^6.14.3",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^4.2.12",
+    "react-promise-suspense": "^0.3.3",
+    "react-spring": "^9.2.3",
+    "react-three-fiber": "^6.0.13",
     "react-typography": "^0.16.19",
-    "sharp": "^0.25.2",
+    "sharp": "^0.28.3",
     "smooth-scrollbar": "^8.5.2",
     "styled-components": "^5.1.1",
-    "swiper": "^5.3.7",
-    "three": "0.112.1",
+    "swiper": "^6.7.0",
+    "three": "0.129.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
     "typography-theme-sutro": "^0.16.19",
-    "use-lax": "^3.2.0"
+    "use-lax": "^4.0.3"
   },
   "devDependencies": {
     "eslint-config-react-app": "^6.0.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.3.1"
   },
   "repository": {
     "type": "git",
