--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-emotion": "^6.7.1",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-sass": "^4.7.1",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-plugin-typography": "^3.7.1",
@@ -43,6 +44,7 @@
     "react-promise-suspense": "^0.3.3",
     "react-spring": "^9.2.3",
     "react-typography": "^0.16.19",
+    "sass": "^1.35.1",
     "sharp": "^0.28.3",
     "smooth-scrollbar": "^8.5.2",
     "styled-components": "^5.1.1",
