--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
+    "devH": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -16,13 +17,16 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/register": "^7.14.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@react-three/fiber": "^7.0.1",
     "babel-plugin-component": "^1.1.1",
     "contentful": "^8.4.2",
+    "esm": "^3.2.25",
     "gatsby": "^3.7.2",
+    "gatsby-alias-imports": "^1.0.6",
     "gatsby-plugin-emotion": "^6.7.1",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-manifest": "^3.7.1",
@@ -40,6 +44,7 @@
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
     "react-promise-suspense": "^0.3.3",
