migrated JS project to TS

--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@react-three/fiber": "^7.0.1",
+    "@types/react-helmet": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-plugin-component": "^1.1.1",
     "contentful": "^8.4.2",
+    "eslint": "^7.30.0",
     "esm": "^3.2.25",
     "gatsby": "^3.7.2",
     "gatsby-alias-imports": "^1.0.6",
