--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "gatsby": "^3.7.2",
     "gatsby-alias-imports": "^1.0.6",
     "gatsby-plugin-emotion": "^6.7.1",
-    "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-sass": "^4.7.1",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typography": "^3.7.1",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-transformer-remark": "^4.4.1",
@@ -67,6 +67,7 @@
     "use-lax": "^4.0.3"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript": "^1.22.4",
     "eslint-config-react-app": "^6.0.0",
     "prettier": "^2.3.1"
   },
