--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@react-three/fiber": "^7.0.1",
     "@types/react-helmet": "^6.1.2",
+    "@types/three": "^0.130.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "babel-plugin-component": "^1.1.1",
@@ -59,7 +60,7 @@
     "smooth-scrollbar": "^8.5.2",
     "styled-components": "^5.1.1",
     "swiper": "^6.7.0",
-    "three": "0.129.0",
+    "three": "^0.130.1",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
