--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@react-spring/three": "^9.2.3",
+    "@react-three/drei": "^7.0.6",
     "@react-three/fiber": "^7.0.1",
+    "@react-three/postprocessing": "^2.0.4-alpha.2",
     "@types/react-helmet": "^6.1.2",
     "@types/three": "^0.130.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -45,6 +48,7 @@
     "html2pdf.js": "^0.9.3",
     "lax.js": "^2.0.3",
     "lerp": "^1.0.3",
+    "leva": "^0.9.13",
     "postprocessing": "^6.14.3",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
@@ -65,7 +69,8 @@
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
     "typography-theme-sutro": "^0.16.19",
-    "use-lax": "^4.0.3"
+    "use-lax": "^4.0.3",
+    "zustand": "^3.5.6"
   },
   "devDependencies": {
     "@graphql-codegen/typescript": "^1.22.4",
