--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "gatsby develop -H 0.0.0.0",
     "devH": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "fix": "eslint ./src/pages/**/*.tsx --fix",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -32,6 +33,7 @@
     "babel-plugin-component": "^1.1.1",
     "contentful": "^8.4.2",
     "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "esm": "^3.2.25",
     "gatsby": "^3.7.2",
     "gatsby-alias-imports": "^1.0.6",
@@ -65,6 +67,7 @@
     "styled-components": "^5.1.1",
     "swiper": "^6.7.0",
     "three": "^0.130.1",
+    "typescript": "^4.3.5",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19",
@@ -74,7 +77,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/typescript": "^1.22.4",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1"
   },
   "repository": {
