--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-plugin-component": "^1.1.1",
     "contentful": "^8.4.2",
     "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "esm": "^3.2.25",
     "gatsby": "^3.7.2",
