--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-typescript": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -31,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-glsl": "^1.0.0",
     "contentful": "^8.4.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -53,6 +55,7 @@
     "lax.js": "^2.0.3",
     "lerp": "^1.0.3",
     "leva": "^0.9.13",
+    "path-browserify": "^1.0.1",
     "postprocessing": "^6.14.3",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
@@ -69,6 +72,7 @@
     "styled-components": "^5.1.1",
     "swiper": "^6.7.0",
     "three": "^0.130.1",
+    "three.meshline": "^1.3.0",
     "typescript": "^4.3.5",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
@@ -79,8 +83,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/typescript": "^1.22.4",
+    "babel-preset-gatsby": "^1.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "glslify": "^7.1.1",
     "prettier": "^2.3.1"
   },
   "repository": {
