--- a/package.json
+++ b/package.json
@@ -1,99 +1,99 @@
 {
-  "name": "erickuang_page",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "dev": "gatsby develop -H 0.0.0.0",
-    "devH": "gatsby develop -H 0.0.0.0",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "fix": "eslint ./src/pages/**/*.tsx --fix",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/register": "^7.14.5",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@react-spring/three": "^9.2.3",
-    "@react-three/drei": "^7.0.6",
-    "@react-three/fiber": "^7.0.1",
-    "@react-three/postprocessing": "^2.0.4-alpha.2",
-    "@types/react-helmet": "^6.1.2",
-    "@types/three": "^0.130.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "babel-plugin-component": "^1.1.1",
-    "babel-plugin-glsl": "^1.0.0",
-    "contentful": "^8.4.2",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "esm": "^3.2.25",
-    "gatsby": "^3.7.2",
-    "gatsby-alias-imports": "^1.0.6",
-    "gatsby-plugin-emotion": "^6.7.1",
-    "gatsby-plugin-manifest": "^3.7.1",
-    "gatsby-plugin-sass": "^4.7.1",
-    "gatsby-plugin-sharp": "^3.7.1",
-    "gatsby-plugin-transition-link": "^1.18.0",
-    "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typography": "^3.7.1",
-    "gatsby-source-filesystem": "^3.7.1",
-    "gatsby-transformer-remark": "^4.4.1",
-    "gsap": "^3.2.6",
-    "html2pdf.js": "^0.9.3",
-    "lax.js": "^2.0.3",
-    "lerp": "^1.0.3",
-    "leva": "^0.9.13",
-    "path-browserify": "^1.0.1",
-    "postprocessing": "^6.14.3",
-    "react": "^17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-pose": "^4.0.10",
-    "react-pose-text": "^3.1.0",
-    "react-promise-suspense": "^0.3.3",
-    "react-spring": "^9.2.3",
-    "react-typography": "^0.16.19",
-    "sass": "^1.35.1",
-    "sharp": "^0.28.3",
-    "smooth-scrollbar": "^8.5.2",
-    "styled-components": "^5.1.1",
-    "swiper": "^6.7.0",
-    "three": "^0.130.1",
-    "three.meshline": "^1.3.0",
-    "typescript": "^4.3.5",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-stern-grove": "^0.16.19",
-    "typography-theme-sutro": "^0.16.19",
-    "use-lax": "^4.0.3",
-    "zustand": "^3.5.6"
-  },
-  "devDependencies": {
-    "@graphql-codegen/typescript": "^1.22.4",
-    "babel-preset-gatsby": "^1.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "glslify": "^7.1.1",
-    "prettier": "^2.3.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+	"name": "erickuang_page",
+	"private": true,
+	"description": "A simplified bare-bones starter for Gatsby",
+	"version": "0.1.0",
+	"license": "MIT",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"dev": "gatsby develop -H 0.0.0.0",
+		"devH": "gatsby develop -H 0.0.0.0",
+		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+		"fix": "eslint ./src/pages/**/*.tsx --fix",
+		"start": "npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+	},
+	"dependencies": {
+		"@babel/preset-env": "^7.14.7",
+		"@emotion/react": "^11.4.0",
+		"@emotion/styled": "^11.3.0",
+		"@fortawesome/fontawesome-free": "^5.13.0",
+		"@react-spring/three": "^9.2.3",
+		"@react-three/drei": "^7.0.6",
+		"@react-three/fiber": "^7.0.1",
+		"@react-three/postprocessing": "^2.0.4-alpha.2",
+		"@types/react-helmet": "^6.1.2",
+		"@types/three": "^0.130.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.3",
+		"@typescript-eslint/parser": "^4.28.3",
+		"babel-preset-gatsby": "^1.9.0",
+		"contentful": "^8.4.2",
+		"eslint": "^7.30.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.24.0",
+		"esm": "^3.2.25",
+		"gatsby": "^3.7.2",
+		"gatsby-alias-imports": "^1.0.6",
+		"gatsby-plugin-emotion": "^6.7.1",
+		"gatsby-plugin-manifest": "^3.7.1",
+		"gatsby-plugin-sass": "^4.7.1",
+		"gatsby-plugin-sharp": "^3.7.1",
+		"gatsby-plugin-transition-link": "^1.18.0",
+		"gatsby-plugin-typegen": "^2.2.4",
+		"gatsby-plugin-typography": "^3.7.1",
+		"gatsby-source-filesystem": "^3.7.1",
+		"gatsby-transformer-remark": "^4.4.1",
+		"gsap": "^3.2.6",
+		"html2pdf.js": "^0.9.3",
+		"lax.js": "^2.0.3",
+		"lerp": "^1.0.3",
+		"leva": "^0.9.13",
+		"path-browserify": "^1.0.1",
+		"postprocessing": "^6.14.3",
+		"react": "^17.0.2",
+		"react-custom-scrollbars": "^4.2.1",
+		"react-dom": "^17.0.2",
+		"react-helmet": "^6.1.0",
+		"react-pose": "^4.0.10",
+		"react-pose-text": "^3.1.0",
+		"react-promise-suspense": "^0.3.3",
+		"react-spring": "^9.2.3",
+		"react-typography": "^0.16.19",
+		"sass": "^1.35.1",
+		"sharp": "^0.28.3",
+		"smooth-scrollbar": "^8.5.2",
+		"styled-components": "^5.1.1",
+		"swiper": "^6.7.0",
+		"three": "^0.130.1",
+		"three.meshline": "^1.3.0",
+		"typescript": "^4.3.5",
+		"typography": "^0.16.19",
+		"typography-theme-fairy-gates": "^0.16.19",
+		"typography-theme-stern-grove": "^0.16.19",
+		"typography-theme-sutro": "^0.16.19",
+		"use-lax": "^4.0.3",
+		"zustand": "^3.5.6"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.14.5",
+		"@babel/plugin-proposal-decorators": "^7.14.5",
+		"@babel/plugin-proposal-private-methods": "^7.14.5",
+		"@babel/plugin-transform-classes": "^7.14.5",
+		"@graphql-codegen/typescript": "^1.22.4",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"glslify": "^7.1.1",
+		"prettier": "^2.3.1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	}
 }
