--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@react-three/drei": "^7.0.6",
 		"@react-three/fiber": "^7.0.1",
 		"@react-three/postprocessing": "^2.0.4-alpha.2",
+		"@types/lodash": "^4.14.171",
 		"@types/react-helmet": "^6.1.2",
 		"@types/three": "^0.130.0",
 		"@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -52,6 +53,7 @@
 		"lax.js": "^2.0.3",
 		"lerp": "^1.0.3",
 		"leva": "^0.9.13",
+		"lodash": "^4.17.21",
 		"path-browserify": "^1.0.1",
 		"postprocessing": "^6.22.1",
 		"react": "^17.0.2",
