--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"@fortawesome/fontawesome-free": "^5.13.0",
 		"@react-spring/three": "^9.2.3",
 		"@react-three/drei": "^7.0.6",
-		"@react-three/fiber": "^7.0.1",
-		"@react-three/postprocessing": "^2.0.4-alpha.2",
+		"@react-three/fiber": "7.0.2",
+		"@react-three/postprocessing": "2.0.4",
 		"@types/lodash": "^4.14.171",
 		"@types/react-helmet": "^6.1.2",
 		"@types/three": "^0.130.0",
