--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
 		"@emotion/react": "^11.4.0",
 		"@emotion/styled": "^11.3.0",
 		"@fortawesome/fontawesome-free": "^5.13.0",
-		"@react-spring/three": "^9.2.3",
-		"@react-three/drei": "^7.0.6",
-		"@react-three/fiber": "7.0.2",
-		"@react-three/postprocessing": "2.0.4",
+		"@react-spring/three": "^9.2.4",
+		"@react-three/drei": "^7.2.1",
+		"@react-three/fiber": "^7.0.5",
+		"@react-three/postprocessing": "^2.0.4-alpha.2",
 		"@types/lodash": "^4.14.171",
 		"@types/react-helmet": "^6.1.2",
 		"@types/three": "^0.130.0",
@@ -55,7 +55,7 @@
 		"leva": "^0.9.13",
 		"lodash": "^4.17.21",
 		"path-browserify": "^1.0.1",
-		"postprocessing": "^6.22.1",
+		"postprocessing": "^6.22.2",
 		"react": "^17.0.2",
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^17.0.2",
