--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@react-spring/three": "^9.2.4",
 		"@react-three/drei": "^7.2.1",
 		"@react-three/fiber": "^7.0.5",
-		"@react-three/postprocessing": "^2.0.4-alpha.2",
+		"@react-three/postprocessing": "2.0.4",
 		"@types/lodash": "^4.14.171",
 		"@types/react-helmet": "^6.1.2",
 		"@types/three": "^0.130.0",
