--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"gatsby-transformer-remark": "^4.4.1",
 		"gsap": "^3.2.6",
 		"html2pdf.js": "^0.9.3",
+		"i18next": "^20.3.4",
 		"lax.js": "^2.0.3",
 		"lerp": "^1.0.3",
 		"leva": "^0.9.13",
@@ -60,6 +61,7 @@
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
+		"react-i18next": "^11.11.3",
 		"react-pose": "^4.0.10",
 		"react-pose-text": "^3.1.0",
 		"react-promise-suspense": "^0.3.3",
