--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/three": "^0.130.0",
 		"@typescript-eslint/eslint-plugin": "^4.28.3",
 		"@typescript-eslint/parser": "^4.28.3",
+		"autoprefixer": "^10.4.8",
 		"babel-preset-gatsby": "^1.9.0",
 		"contentful": "^8.4.2",
 		"eslint": "^7.30.0",
@@ -41,6 +42,7 @@
 		"gatsby-alias-imports": "^1.0.6",
 		"gatsby-plugin-emotion": "^6.7.1",
 		"gatsby-plugin-manifest": "^3.7.1",
+		"gatsby-plugin-postcss": "^5.21.0",
 		"gatsby-plugin-sass": "^4.7.1",
 		"gatsby-plugin-sharp": "^3.7.1",
 		"gatsby-plugin-transition-link": "^1.18.0",
@@ -56,6 +58,7 @@
 		"leva": "^0.9.13",
 		"lodash": "^4.17.21",
 		"path-browserify": "^1.0.1",
+		"postcss": "^8.4.16",
 		"postprocessing": "^6.22.2",
 		"react": "^17.0.2",
 		"react-custom-scrollbars": "^4.2.1",
@@ -72,6 +75,7 @@
 		"smooth-scrollbar": "^8.5.2",
 		"styled-components": "^5.1.1",
 		"swiper": "^6.7.0",
+		"tailwindcss": "^3.1.8",
 		"three": "^0.130.1",
 		"three.meshline": "^1.3.0",
 		"typescript": "^4.3.5",
