--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"gatsby": "^3.7.2",
 		"gatsby-alias-imports": "^1.0.6",
 		"gatsby-plugin-emotion": "^6.7.1",
+		"gatsby-plugin-image": "^2.21.0",
 		"gatsby-plugin-manifest": "^3.7.1",
 		"gatsby-plugin-postcss": "^5.21.0",
 		"gatsby-plugin-sass": "^4.7.1",
@@ -49,6 +50,7 @@
 		"gatsby-plugin-typegen": "^2.2.4",
 		"gatsby-plugin-typography": "^3.7.1",
 		"gatsby-source-filesystem": "^3.7.1",
+		"gatsby-source-sanity": "^7.4.2",
 		"gatsby-transformer-remark": "^4.4.1",
 		"gsap": "^3.2.6",
 		"html2pdf.js": "^0.9.3",
