--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
 		"@react-three/fiber": "^7.0.5",
 		"@react-three/postprocessing": "2.0.4",
 		"@types/lodash": "^4.14.171",
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
 		"@types/react-helmet": "^6.1.2",
 		"@types/three": "^0.130.0",
-		"@typescript-eslint/eslint-plugin": "^4.28.3",
-		"@typescript-eslint/parser": "^4.28.3",
+		"@typescript-eslint/eslint-plugin": "^5.30.3",
+		"@typescript-eslint/parser": "^5.35.1",
 		"autoprefixer": "^10.4.8",
 		"babel-preset-gatsby": "^1.9.0",
-		"contentful": "^8.4.2",
-		"eslint": "^7.30.0",
-		"eslint-config-airbnb": "^18.2.1",
+		"eslint": "8.21.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.24.0",
+		"eslint-plugin-react": "^7.31.1",
 		"esm": "^3.2.25",
 		"gatsby": "^3.7.2",
 		"gatsby-alias-imports": "^1.0.6",
@@ -62,9 +62,9 @@
 		"path-browserify": "^1.0.1",
 		"postcss": "^8.4.16",
 		"postprocessing": "^6.22.2",
-		"react": "^17.0.2",
+		"react": "18.2.0",
 		"react-custom-scrollbars": "^4.2.1",
-		"react-dom": "^17.0.2",
+		"react-dom": "18.2.0",
 		"react-helmet": "^6.1.0",
 		"react-i18next": "^11.11.3",
 		"react-pose": "^4.0.10",
@@ -80,7 +80,7 @@
 		"tailwindcss": "^3.1.8",
 		"three": "^0.130.1",
 		"three.meshline": "^1.3.0",
-		"typescript": "^4.3.5",
+		"typescript": "4.7.4",
 		"typography": "^0.16.19",
 		"typography-theme-fairy-gates": "^0.16.19",
 		"typography-theme-stern-grove": "^0.16.19",
@@ -94,10 +94,11 @@
 		"@babel/plugin-proposal-private-methods": "^7.14.5",
 		"@babel/plugin-transform-classes": "^7.14.5",
 		"@graphql-codegen/typescript": "^1.22.4",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"glslify": "^7.1.1",
-		"prettier": "^2.3.1"
+		"prettier": "^2.7.1"
 	},
 	"repository": {
 		"type": "git",
