--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"@emotion/styled": "^11.3.0",
 		"@fortawesome/fontawesome-free": "^5.13.0",
 		"@react-spring/three": "^9.2.4",
-		"@react-three/drei": "^7.2.1",
-		"@react-three/fiber": "^7.0.5",
+		"@react-three/drei": "^9.25.3",
+		"@react-three/fiber": "^8.6.2",
 		"@react-three/postprocessing": "2.0.4",
 		"@types/lodash": "^4.14.171",
 		"@types/react": "^18.0.17",
@@ -38,7 +38,7 @@
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-react": "^7.31.1",
 		"esm": "^3.2.25",
-		"gatsby": "^3.7.2",
+		"gatsby": "^4.22.0",
 		"gatsby-alias-imports": "^1.0.6",
 		"gatsby-plugin-emotion": "^6.7.1",
 		"gatsby-plugin-image": "^2.21.0",
@@ -62,9 +62,9 @@
 		"path-browserify": "^1.0.1",
 		"postcss": "^8.4.16",
 		"postprocessing": "^6.22.2",
-		"react": "17.0.2",
+		"react": "^18.2.0",
 		"react-custom-scrollbars": "^4.2.1",
-		"react-dom": "17.0.2",
+		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
 		"react-i18next": "^11.11.3",
 		"react-pose": "^4.0.10",
@@ -78,7 +78,7 @@
 		"styled-components": "^5.1.1",
 		"swiper": "^6.7.0",
 		"tailwindcss": "^3.1.8",
-		"three": "^0.130.1",
+		"three": "^0.144.0",
 		"three.meshline": "^1.3.0",
 		"typescript": "4.7.4",
 		"typography": "^0.16.19",
