--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "@types/three": "0.142.0",
+    "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
@@ -48,7 +48,7 @@
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "tailwindcss": "^3.2.4",
-    "three": "0.142.0",
+    "three": "^0.150.1",
     "typescript": "4.9.4",
     "zustand": "^4.3.5"
   }
