--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/css": "^11.10.5",
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.10",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "9.54.2",
@@ -29,8 +25,9 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.2",
@@ -39,12 +36,12 @@
     "gsap": "^3.11.4",
     "idb": "^7.1.1",
     "leva": "0.9.29",
-    "next": "13.0.6",
+    "next": "^13.4.4",
     "postcss": "^8.4.20",
     "postprocessing": "^6.29.3",
     "prettier": "^2.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "tailwindcss": "^3.2.4",
