--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.5.0",
