--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "4.13.0",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "9.54.2",
     "@react-three/fiber": "^8.10.1",
@@ -39,6 +40,7 @@
     "idb": "^7.1.1",
     "leva": "0.9.29",
     "next": "^13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "^8.4.20",
     "postprocessing": "^6.29.3",
     "prettier": "^2.8.1",
@@ -50,5 +52,8 @@
     "three": "^0.150.1",
     "typescript": "4.9.4",
     "zustand": "^4.3.5"
+  },
+  "devDependencies": {
+    "prisma": "4.13.0"
   }
 }
