--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^4.19.0",
     "@thirdweb-dev/react": "^3.6.7",
     "@thirdweb-dev/sdk": "^3.6.7",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -28,6 +29,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "^13.4.4",
@@ -54,6 +56,6 @@
     "zustand": "^4.3.5"
   },
   "devDependencies": {
-    "prisma": "4.13.0"
+    "prisma": "^4.16.1"
   }
 }
