--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.10",
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@lexical/react": "^0.11.1",
     "@prisma/client": "4.13.0",
@@ -32,6 +32,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.8",
     "eslint": "8.29.0",
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.5.0",
