--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ethers": "^5.7.2",
     "framer-motion": "^10.0.1",
     "framer-motion-3d": "^10.0.1",
+    "glslify-loader": "^2.0.0",
     "gsap": "^3.11.4",
     "idb": "^7.1.1",
     "leva": "0.9.29",
@@ -50,6 +51,7 @@
     "postcss": "^8.4.20",
     "postprocessing": "^6.29.3",
     "prettier": "^2.8.1",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.0",
