--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@thirdweb-dev/sdk": "^3.6.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.11.15",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "^18.2.6",
     "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -52,13 +52,13 @@
     "postprocessing": "^6.29.3",
     "prettier": "^2.8.1",
     "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.0-next-fecc288b7-20221025",
+    "react-dom": "^18.3.0-next-fecc288b7-20221025",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "tailwindcss": "^3.2.4",
     "three": "^0.150.1",
-    "typescript": "4.9.4",
+    "typescript": "5.1.3",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
