--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
